svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: longlivesample
spec:
  selector:
    app: longlivesample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
