ing-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longlivesamples
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longlivesample
            port:
              number: 80
